# ecom_bot

./: .gitignore  README.md  alembic.ini  cleanup.py  pyproject.toml  run.sh
migrations/: env.py
migrations/versions/: 02a55e62d3dd_change_carts_user_id_to_biginteger.py  0ada6921b672_add_user_order_relationship.py  6db09a9b6732_create_initial_db_schema.py  7446947a531a_change_telegram_id_to_biginteger_to_.py
src/ecombot/: config.py  logging_setup.py  main.py  utils.py
src/ecombot/bot/: callback_data.py  keyboards.py  middlewares.py
src/ecombot/bot/filters/: is_admin.py
src/ecombot/bot/handlers/: admin.py  admin_orders.py  cart.py  catalog.py  checkout.py  orders.py  profile.py
src/ecombot/db/: crud.py  database.py  models.py
src/ecombot/schemas/: dto.py  enums.py
src/ecombot/services/: cart_service.py  catalog_service.py  notification_service.py  order_service.py  user_service.py
tests/: conftest.py  test_cart_service.py  test_handlers.py  test_notification_service.py  test_order_user_services.py  test_services.py
