[tool.poetry]
name = "ecombot"
version = "0.1.0"
description = "Telegram Bot for e-commerce with admin panel"
authors = ["dmvaled <dmvaled@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ecombot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
loguru = "^0.7.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
aiogram = "^3.4.1"
asyncpg = "^0.30.0"
anyio = "^4.2.0"
poetry-core = "^2.2.1"
alembic = "^1.16.5"
sqlalchemy = { version = ">=2.0.29", extras = ["asyncio", "mypy"] }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.13.1"
black = "^24.2.0"
mypy = "^1.18.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "W", # pycodestyle warnings
  "I", # isort
  "B", # flake8-bugbear
  "Q", # flake8-quotes
  "C4", # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
